--- a/client/client/package.json
+++ b/client/client/package.json
@@ -18,6 +18,9 @@
     "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.2"
   },
+  "engines": {
+    "node": "16.13.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
